--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:weightSum="10"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,12 +27,14 @@
             android:id="@+id/imagelogo"
             android:layout_width="450dp"
             android:layout_height="450dp"
+
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:src="@drawable/gamename"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -43,7 +46,6 @@
     <Button
         android:id="@+id/goButton"
         android:layout_width="120dp"
-
         android:layout_height="40dp"
 
         android:layout_marginBottom="8dp"
@@ -53,6 +55,7 @@
         android:background="@drawable/start_button"
         android:onClick="goMethod"
         android:text=""
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -82,11 +85,9 @@
         <!--app:layout_constraintVertical_bias="0.949" />-->
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/optionsButton"
         android:layout_width="120dp"
-
         android:layout_height="40dp"
-
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -95,6 +96,7 @@
         android:background="@drawable/options_button"
         android:onClick="settings"
         android:text=""
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.97"
@@ -103,23 +105,22 @@
         app:layout_constraintVertical_bias="0.878" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/tutorialButton"
         android:layout_width="120dp"
-
         android:layout_height="40dp"
-
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/tutorial_button"
+        android:onClick="goTutorial"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.876" />
+        app:layout_constraintVertical_bias="0.876"/>
 
 </android.support.constraint.ConstraintLayout>
