--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -9,8 +9,8 @@
     tools:context="com.example.pauline.groupprojecttry.StartPageActivity">
 
     <LinearLayout
-        android:layout_width="411dp"
-        android:layout_height="400dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
@@ -24,23 +24,13 @@
         app:layout_constraintVertical_bias="0.0">
 
         <ImageView
+            android:paddingTop="150dp"
             android:id="@+id/imagelogo"
-            android:layout_width="450dp"
-            android:layout_height="450dp"
-
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:src="@drawable/gamename"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            android:src="@drawable/game_logo2"
+ />
     </LinearLayout>
 
     <Button
