--- a/app/src/main/res/layout/activity_play_settings.xml
+++ b/app/src/main/res/layout/activity_play_settings.xml
@@ -83,6 +83,11 @@
         android:textSize="25sp" />
 
     <!-- Spinner Element -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Styles that you have:"
+        android:textSize="15dp"/>
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="fill_parent"
@@ -93,6 +98,12 @@
         android:prompt="@string/spinner_title"
         android:textSize="25dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Styles that you can buy:"
+        android:textSize="15dp"/>
+
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="fill_parent"
@@ -101,7 +112,8 @@
         android:layout_marginTop="10dip"
         android:backgroundTint="@android:color/background_light"
         android:prompt="@string/spinner_title"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        />
 
     <Button
         android:id="@+id/buy"
